--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Bosch connectivity</title>
+  <title>magicears</title>
   <script type="text/javascript" src="http://webapi.amap.com/maps?v=1.3&key=8dcfd800bccea2bcc7588648ec5b4c10"></script>
   <script src="//webapi.amap.com/ui/1.0/main.js"></script>
   <style>
